js/js.translator/testData/incremental/invalidation/jsSymbol/lib2/lib.0.kt
open class FooBarImpl : Bar(), Foo {
   override fun foo(hint: String): String = "FooImpl"
}
